tests/semantic_errors/andrei2_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local id : integer = "str" - 90.5
end

main()
